[project]
name = "claude-log-viewer"
version = "0.1.0"
description = "A local web viewer for Claude Code session logs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.scripts]
claude-log-viewer = "claude_log_viewer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
